--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -123,14 +123,14 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Intersection of Automation and Exploratory Testing</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Testing Cup (10.6.2019), Poznan, Poland</div>
-            <div class="wherewhenwhere">TestIstanbul (16.4.2019), Istanbul, Turkey</div>
-            <div class="wherewhenwhere">Selenium Conference India (29-30.6.2018), Bengaluru, India</div>
+            <div class="wherewhenwhere">Testing Cup, June 10th 2019, Poznan, Poland</div>
+            <div class="wherewhenwhere">TestIstanbul, April 16th 2019, Istanbul, Turkey</div>
+            <div class="wherewhenwhere">Selenium Conference India, June 29th & 30th 2018, Bengaluru, India</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Dev# (21.9.2019), Gdansk, Poland</div>
-            <div class="wherewhenwhere">React Finland (25.4.2019), Helsinki, Finland.</div>
-            <div class="wherewhenwhere">Software Testing Helsinki Meetup (5.10.2018), Helsinki, Finland</div>
-            <div class="wherewhenwhere">The Testing Guild Online Conference (20.6.2018), Online</div>
+            <div class="wherewhenwhere">Dev#, September 21st 2019, Gdansk, Poland</div>
+            <div class="wherewhenwhere">React Finland, April 25h 2019, Helsinki, Finland.</div>
+            <div class="wherewhenwhere">Software Testing Helsinki Meetup, October th 2018, Helsinki, Finland</div>
+            <div class="wherewhenwhere">Testing Guild Conference, June 20th 2018, Online</div>
             <a href="https://www.youtube.com/watch?v=Es4SfYog5VA"><i class="fas fa-video"></i></a>
             <div class="talktheme">#ContemporaryExploratoryTesting, #ExploratoryUnitTesting</div>
         </div>
@@ -173,11 +173,11 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Making Teams Awesome</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Testing Portugal 2017, Lisbon, Portugal (28.11.2017)</div>
-            <div class="wherewhenwhere">STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)</div>
-            <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (29.9.2017)</div>
+            <div class="wherewhenwhere">Testing Portugal, November 28th 2017, Lisbon, Portugal</div>
+            <div class="wherewhenwhere">STARWest Conference, October 1st - 6th 2017, Anaheim, USA</div>
+            <div class="wherewhenwhere">SEETest Conference, September 29th 2017, Sofia, Bulgaria</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
+            <div class="wherewhenwhere">STAREast Conference, April 29th to May 5th 2018, Orlando, USA</div>
             <div class="talktheme">#Teamwork, #ModernAgile, #WorkBreakdown</div>
         </div>
 
@@ -398,6 +398,22 @@
         </div>
 
         <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Time Management For Testers</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Test Guru Summit, Feb 9th 2023, Helsinki, Finland</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Onko valmista ilman testausta? (Is there Done without Testing?)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Organization, March 17th 2023, Online</div>
+        </div>
+
+        <div class="card2">
             <div class="timecircle">15 min</div>
             <div class="talktitle">Breaking Illusions with Exploratory Testing</div>
             <div class="talktype">TALK</div>
@@ -415,14 +431,6 @@
             <div class="wherewhenwhere">ScanAgile 2015, Helsinki, Finland (11.3.2015)</div>
             <a href="http://www.slideshare.net/maaretp/btdconf-breaking-illusions-testing-is-your-most-valuable-asset"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=0NAB4nDOzl0"><i class="fas fa-video"></i></a>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <div class="talktitle">Harnessing the Power of Learning, co-presented with Ivan Turbin</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Nordic Testing Days 2018 in Tallinn, Estonia (6-8.6.2018)</div>
-            <a href="https://www.youtube.com/watch?v=YxJZr7t0vcQ"><i class="fas fa-video"></i></a>
         </div>
 
     <div class="card2">
@@ -677,6 +685,14 @@
         <div class="wherewhenwhere">Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)</div>
         <div class="wherewhenwhere">Tech Excellence meetup in Helsinki, Finland (June 2016)</div>
         <a href="https://www.slideshare.net/maaretp/agile-2016-strongstyle-pairing"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Harnessing the Power of Learning, co-presented with Ivan Turbin</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Nordic Testing Days 2018 in Tallinn, Estonia (6-8.6.2018)</div>
+        <a href="https://www.youtube.com/watch?v=YxJZr7t0vcQ"><i class="fas fa-video"></i></a>
     </div>
 
     <div class="card2">
