--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -64,7 +64,7 @@
             <div class="wherewhenwhere">German Testing Day, May 3rd & 4th 2021, Online</div>
             <div class="wherewhenwhere">SLASSCOM Quality and Business Excellence Summit, March 10th 2021, Online</div>
             <div class="wherewhenwhere">JAX London, October 9th 2019, London, United Kingdom</div>
-            <div class="wherewhenwhere">DDD Europe, January 31st - Feb 1st 2019, Amsterdam, the Netherlands</div>
+            <div class="wherewhenwhere">DDD Europe, January 31st & Feb 1st 2019, Amsterdam, the Netherlands</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">TECH(K)NOW Day, March 8th 2022, Online</div>
             <div class="wherewhenwhere">Agile Greece Summit, September 20th 2019, Athens, Greece</div>
@@ -110,8 +110,8 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Hands-off Exploratory Testing - How to Manage Test at Scale</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">HUSTEF Conference (18-21.10.2021), Online</div>
-            <div class="wherewhenwhere">QA Talks (4.6.2021), Online</div>
+            <div class="wherewhenwhere">HUSTEF Conference, October 18th to 21st 2021, Online</div>
+            <div class="wherewhenwhere">QA Talks, June 4th 2021, Online</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Game of Testing -unconference (4.9.2022), Online</div>
             <a href="https://www.slideshare.net/maaretp/hustef-hands-off-exploratory-testing-managing-at-scale"><i class="fab fa-slideshare"></i></a>
@@ -349,9 +349,9 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">We're Work in Progress - Lessons on Becoming a Great Tester</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)</div>
+            <div class="wherewhenwhere">Test Masters Academy New Testing Conference, September 26th & 27th 2016, New York, USA</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)</div>
+            <div class="wherewhenwhere">FiSTB Testing Assembly, Septermber 20th & 21st 2016, Helsinki, Finland</div>
             <div class="talktheme">#Learning, #ContemporaryExploratoryTesting, #Attitude</div>
         </div>
 
@@ -359,7 +359,7 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Collaborative Exploratory and Unit Testing</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Testival, Split, Croatia (19.9.2015)</div>
+            <div class="wherewhenwhere">Testival, September 19th 2015, Split, Croatia</div>
             <a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
         </div>
