--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -113,7 +113,7 @@
             <div class="wherewhenwhere">HUSTEF Conference, October 18th to 21st 2021, Online</div>
             <div class="wherewhenwhere">QA Talks, June 4th 2021, Online</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Game of Testing -unconference (4.9.2022), Online</div>
+            <div class="wherewhenwhere">Game of Testing, September 4th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/hustef-hands-off-exploratory-testing-managing-at-scale"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E"><i class="fas fa-video"></i></a>
             <div class="talktheme">#ModernTestManagement, #ExploratoryTesting</div>
@@ -139,11 +139,11 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Learning (Programming) through Osmosis</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017)</div>
-            <div class="wherewhenwhere">Agile Day Riga 2017, Riga, Latvia (7-8.7.2017) </div>
+            <div class="wherewhenwhere">Agile Day Riga, July 7th & 8th 2017, Riga, Latvia</div>
+            <div class="wherewhenwhere">Agile Testing Days, November 13th to 17th 2017, Potsdam, Germany</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Nordic Testing Days, Tallinn, Estonia (8.-9.6.2017)</div>
-            <div class="wherewhenwhere">Devoxx UK, London, UK (8.-10.6.2016)</div>
+            <div class="wherewhenwhere">Devoxx UK, June 8th to 10th 2016, London, UK</div>
+            <div class="wherewhenwhere">Nordic Testing Days, June 8th & 9th 2017, Tallinn, Estonia</div>
             <a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&"><i class="fas fa-video"></i></a>
             <div class="talktheme">#EnsembleTesting, #EnsembleProgramming</div>
