--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -49,7 +49,7 @@
             <div class="talktitle">Whose Test Is It Anyway?</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
-            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
+            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
