--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -1377,7 +1377,7 @@
 
     </section>
     <div class="sectiondescr">
-    <h2 id="course">Training Courses</h2>
+    <h2 id="training">Training Courses</h2>
     <p>Training course aim at solidifying knowledge and skills transfer to students, moving each student from where they are to better. Really great courses would run with same group over longer time, but in business training, we often start by budgeting 1/2 day to 2 days for a particular topic.</p>
     </div>
 
