--- a/quote.html
+++ b/quote.html
@@ -1,13 +1,25 @@
 <head>
 <link rel="stylesheet" href="quote.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
 </head>
 <body>
+
 <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
-        Writing is the best way to talk without being interrupted.
+        Test automation is manual testing.
        </h1>
-      <h4>&mdash;Jules Renard</h4>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+</div>
+
+
+<div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Investing in onboarding is the ultimate shift-left.
+       </h1>
+      <h4>&mdash;Anne-Marie Charrett</h4>
     </div>
   </div>
 
