--- a/contents.html
+++ b/contents.html
@@ -49,6 +49,7 @@
         <div class="contents2-title">PODCAST APPEARANCES</div>
       
         <ul>
+          <li>glich Podcast, <a href="https://anchor.fm/glich/episodes/E23---Examining-the-nuances-of-Software-Testing-e1sfqf3">Examining the nuances of Software Testing</a>, December 22nd, 2022</li>
           <li>Quality Bits Podcast, <a href="https://www.buzzsprout.com/2037134/11705424">Bandwidth to Grow: Supporting Growth and Change with Maaret Pyhäjärvi</a>, November 28th, 2022</li>
           <li>Quality Sense Podcast, <a href="https://abstracta.us/blog/podcast/maaret-pyhajarvi-exploratory-testing/">Exploratory Testing</a>, September 30th, 2022</li>
           <li>Koodarikuiskaaja, <a href="https://koodarikuiskaaja.fi/podcast/yhteisoohjelmoinnissa-tehdaan-yllattavia-asioita/">Yhteisohjelmoinnissa tehdään yllättäviä asioita</a>, August 28th, 2022</li>
