Update ET just a bit

--- a/ETI.html
+++ b/ETI.html
@@ -3,11 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta charset="utf-8">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" type="text/css" href="./style_basic.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
 
   <title>Exploratory Testing Index | Maaret Pyhäjärvi</title>
   <meta property="og:title" content="Exploratory Testing Index">
@@ -36,7 +33,7 @@
 
 <table>
 <td>
-  <a href="https://leanpub.com/exploratorytesting"><img width="200px" src="img/ETbook.png"></a>
+  <a href="https://leanpub.com/exploratorytesting"><img width="200px" src="images/Book-ET.png"></a>
 </td>
 <td>
 <i><b>This index is a thematic analysis of my writing around exploratory testing.</i></b><p>
@@ -49,8 +46,8 @@ Last updated: Sept 19th, 2021.
 
 <h2>Courses</h2>
 <ul>
-<li><a href="https://www.exploratorytestingacademy.com/courses/">
-  Exploratory Testing Foundations slides as with notes</a></li>
+<li><a href="https://dev.to/maaretp/exploratory-testing-foundations-4lb3">
+  Exploratory Testing Foundations slides with notes. Course taught without slides as fully experiential.</a></li>
 </ul>
 
 <h2>What is Exploratory Testing</h2>
