Update link to foo talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -85,7 +85,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">FooConf, February 1st 2023, Helsinki, Finland</div>
-            <a href="https://www.slideshare.net/maaretp/lets-do-a-thing-and-call-it-foo"><i class="fab fa-slideshare"></i></a>
+            <a href="https://speakerdeck.com/maaretp/talk-lets-do-a-thing-and-call-it-foo-2023-ed"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
             <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
