--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <ul>
             <li>TALK: <span>Let's Do a Thing and Call It Foo</span> at <a href="https://fooconf.fi">FooConf</a>, Feb 1st 2023, in Helsinki, Finland.</li>
             <li>TALK: <span>Time Management for Testers</span> at <a href="https://www.testauskoulutus.com/test-guru-summit">Test Guru Summit</a>, Feb 9th 2023, in Helsinki, Finland.</li>
+            <li>PANEL: <span>Test Automation: Friend or Foe?</span> at AskUI Hackathon, March 7th 2023, Online</li>
             <li>TALK: <span>Onko valmista ilman testausta? (Is there Done without Testing?)</span> at Customer Organization, March 17th 2023, Online.</li>
             <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
             <li>WORKSHOP: <span>Social Software Testing Approaches</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
