Add Renegotiating testing talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -77,7 +77,6 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">SCHEDULED</div>
             <div class="talktitle">Let's Do a Thing and Call It Foo</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testμ Conference, August 23rd 2022, Online</div>
@@ -404,6 +403,14 @@
             <div class="talktitle">Time Management For Testers</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Test Guru Summit, Feb 9th 2023, Helsinki, Finland</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Renegotiating Testing</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">7N Networking Event, March 16th 2023, Helsinki, Finland</div>
         </div>
 
         <div class="card2">
