--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>STREAM: <span>Things to Unlearn with Maaret and Shruti</span> at <a href="https://www.linkedin.com/events/testingtalk-unlearn7025736237529378816/">Linkedin Events</a>, Feb 3rd 2023, Online.</li>
             <li>TALK: <span>Time Management for Testers</span> at <a href="https://www.testauskoulutus.com/test-guru-summit">Test Guru Summit</a>, Feb 9th 2023, in Helsinki, Finland.</li>
             <li>PANEL: <span>Test Automation: Friend or Foe?</span> at AskUI Hackathon, March 7th 2023, Online.</li>
             <li>TALK: <span>Renegotiating Testing</span> at 7N Networking Event, March 16th 2023, Helsinki, Finland</li>
             <li>TALK: <span>Onko valmista ilman testausta? (Is there Done without Testing?)</span> at Customer Organization, March 17th 2023, Online.</li>
+            <li>TALK: <span>Practice Makes Better - What Repeating Shortening Times to Release Taught Me</span> at <a href="https://www.scan-agile.org">ScanAgile</a>, March 28th & 29th 2023, Helsinki, Finland</li>
             <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
             <li>WORKSHOP: <span>Social Software Testing Approaches</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
         </ul>
