--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>TALK: <span>Time Management for Testers</span> at <a href="https://www.testauskoulutus.com/test-guru-summit">Test Guru Summit</a>, Feb 9th 2023, in Helsinki, Finland.</li>
+            <li>TALK: <span>Time Management for Testers</span> at <a href="https://www.testauskoulutus.com/test-guru-summit">Test Guru Summit</a>, Feb 9th 2023, Helsinki, Finland.</li>
+            <li>TALK: <span>Mikrobloggaus Mastodonissa (Microblogging on Mastodon)</span> at <a href="https://tivia.fi/event/mikrobloggaus-mastodonissa-2023-02-15-655/register">Tivia Webinar</a>, February 15th 2023, Online</li>
             <li>PANEL: <span>Test Automation: Friend or Foe?</span> at AskUI Hackathon, March 7th 2023, Online.</li>
             <li>TALK: <span>Renegotiating Testing</span> at 7N Networking Event, March 16th 2023, Helsinki, Finland</li>
             <li>TALK: <span>Onko valmista ilman testausta? (Is there Done without Testing?)</span> at Customer Organization, March 17th 2023, Online.</li>
