Add card for scanagile talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -408,6 +408,14 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Practice Makes Better - What Repeating Shortening Times to Release Taught Me</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">ScanAgile, March 28-29th 2023, Helsinki, Finland</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
             <div class="talktitle">Renegotiating Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">7N Networking Event, March 16th 2023, Helsinki, Finland</div>
