Adding themes on new talks

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -411,6 +411,7 @@
             <div class="talktitle">Practice Makes Better - What Repeating Shortening Times to Release Taught Me</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">ScanAgile, March 28-29th 2023, Helsinki, Finland</div>
+            <div class="talktheme">#ContinuousDelivery</div>
         </div>
 
         <div class="card2">
@@ -419,6 +420,7 @@
             <div class="talktitle">Renegotiating Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">7N Networking Event, March 16th 2023, Helsinki, Finland</div>
+            <div class="talktheme">#WhoDoesTesting, #ChangeTrends</div>
         </div>
 
         <div class="card2">
