Add panel to list

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -1132,6 +1132,13 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Test Automation: Friend or Foe?</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">AskUI Hackathon, March 7th 2023, Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</div>
         <div class="talktype">PANEL</div>
         <div class="wherewhenwhere">Webinar (19.8.2022), Online</div>
