--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -1169,21 +1169,21 @@
         <div class="timecircle">60 min</div>
         <div class="talktitle">Fireside Chat on Scaling Your QA Ops</div>
         <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">BrowserStack event (19.7.2022), Online</div>
+        <div class="wherewhenwhere">BrowserStack event, July 19th 2022, Online</div>
     </div>
 
     <div class="card2">
         <div class="timecircle">60 min</div>
         <div class="talktitle">Fireside Chat with Maaret Pyhäjärvi</div>
         <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">mabl Experience tour (23.3.2021), Online</div>
+        <div class="wherewhenwhere">mabl Experience tour, March 23rd 2021, Online</div>
     </div>
 
     <div class="card2">
         <div class="timecircle">60 min</div>
         <div class="talktitle">Exploring the Exploratory with Maaret Pyhäjärvi</div>
         <div class="talktype">PANEL</div>
-        <div class="wherewhenwhere">Ministry of Testing Bangalore (7.5.2021), Online</div>
+        <div class="wherewhenwhere">Ministry of Testing Bangalore, May 7th 2021, Online</div>
     </div>
 
     <div class="card2">
