--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -1733,7 +1733,7 @@
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2001, Helsinki, Finland </div>
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2002, Helsinki, Finland </div>
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2018, Helsinki, Finland </div>
-        <p>This course is university course on testing and release management, advanced topics. Since I am no longer at university, I no longer teach this.</p>
+        <p>This course is university course on testing and quality assurance. Since I am no longer at university, I no longer teach this.</p>
 
     </div>
 
