Add time management slide link

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -403,6 +403,7 @@
             <div class="talktitle">Time Management For Testers</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Test Guru Summit, Feb 9th 2023, Helsinki, Finland</div>
+            <a href="https://speakerdeck.com/maaretp/talk-time-management-in-testing"><i class="fab fa-slideshare"></i></a>
         </div>
 
         <div class="card2">
