--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2>Upcoming Talks</h2>
         <ul>
             <li>PANEL: <span>Test Automation: Friend or Foe?</span> at AskUI Hackathon, March 7th 2023, Online</li>
-            <li>PANEL: <span>TBD</span> at <a href="https://futurecreators2023.splashthat.com">Mimmit Koodaa Future Creators 2023, March 14 2023, Helsinki, Finland</a> </li>
+            <li>PANEL: <span>TBD</span> at <a href="https://futurecreators2023.splashthat.com">Mimmit Koodaa Future Creators 2023</a>, March 14 2023, Helsinki, Finland</li>
             <li>TALK: <span>Renegotiating Testing</span> at 7N Networking Event, March 16th 2023, Helsinki, Finland</li>
             <li>TALK: <span>Onko valmista ilman testausta? (Is there Done without Testing?)</span> at Customer Organization, March 17th 2023, Online</li>
             <li>TALK: <span>Practice Makes Better - What Repeating Shortening Times to Release Taught Me</span> at <a href="https://www.scan-agile.org">ScanAgile</a>, March 28th & 29th 2023, Helsinki, Finland</li>
