Add slides for reneg

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -421,6 +421,7 @@
             <div class="talktitle">Renegotiating Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">7N Networking Event, March 16th 2023, Helsinki, Finland</div>
+            <a href="https://speakerdeck.com/maaretp/7n-network-renegotiating-testing"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#WhoDoesTesting, #ChangeTrends</div>
         </div>
 
