--- a/contents.html
+++ b/contents.html
@@ -48,6 +48,7 @@
         <div class="contents2-title">PODCAST APPEARANCES</div>
       
         <ul>
+          <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/4HBbv0iWmDuBuP0HOfPBMe?si=S3ZPaoXjTEGDV_4ZqoV31A&nd=1">Maaret Pyhäjärvi on The 10x Tester, Maximizing Your Impact, Testing Dozen and Watermelons: LT012 Part 2</a>, March 30th, 2023</li>
           <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/77ecY6JsnWHEwRWBgkoVWm?si=Ox5UTN8PQ4yp6k9YuJ2v9w&nd=1">Maaret Pyhäjärvi on the Paradox of Tight Schedules, Pull Systems, Art of Co-Creation and Ensemble Programming, LT011-Part1</a>, March 13th 2023</li>
           <li>Linkedin event, <a href="https://www.youtube.com/watch?v=szcfI69Dt-s">Things to Unlearn with Maaret and Shruti</a>, Feb 3rd 2023</li>
           <li>QA Therapy Podcast, <a href="https://anchor.fm/qa-therapy-podcast/episodes/S2-E13-Exploratory-Testing-e1umt2j">Exploratory Testing with Maaret Pyhäjärvi</a>, February 9th 2023</li>
