--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>TALK: <span>Onko valmista ilman testausta? (Is there Done without Testing?)</span> at Customer Organization, March 17th 2023, Online</li>
-            <li>TALK: <span>Practice Makes Better - What Repeating Shortening Times to Release Taught Me</span> at <a href="https://www.scan-agile.org">ScanAgile</a>, March 28th & 29th 2023, Helsinki, Finland</li>
             <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
             <li>WORKSHOP: <span>Social Software Testing Approaches</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
+            <li>KEYNOTE: <span>Make Your Impact with Testing</span> at <a href="https://hustef.hu">HUSTEF</a>, October 3-5th 2023, Budapest, Hungary.</li>
         </ul>
     </div>
 </section>
