Add new talks on pages

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -59,6 +59,20 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Make Your Impact with Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">HUSTEF, October 3-5th 2023, Budapest, Hungary</div>
+            <div class="talktheme">#Impact, #ResultsGap, #Career</div>
+            <!--
+            <i class="fab fa-slideshare"></i>
+            <i class="fas fa-video"></i>
+            <i class="far fa-gem"></i>
+            -->
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Breaking Illusions with Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">DDD Europe, January 31st & Feb 1st 2019, Amsterdam, the Netherlands</div>
@@ -400,6 +414,14 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Coaching Teams to Modern Test Management</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Geekle QA Summit, May 30th-31st 2023, Online</div>
+            <div class="talktheme">#ContinuousDelivery</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Time Management For Testers</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Test Guru Summit, Feb 9th 2023, Helsinki, Finland</div>
@@ -408,16 +430,15 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
             <div class="talktitle">Practice Makes Better - What Repeating Shortening Times to Release Taught Me</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">ScanAgile, March 28-29th 2023, Helsinki, Finland</div>
             <div class="talktheme">#ContinuousDelivery</div>
+            <a href="https://speakerdeck.com/maaretp/scanagile-practice-makes-better"><i class="fab fa-slideshare"></i></a>
         </div>
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
             <div class="talktitle">Renegotiating Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">7N Networking Event, March 16th 2023, Helsinki, Finland</div>
@@ -427,7 +448,6 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
             <div class="talktitle">Onko valmista ilman testausta? (Is there Done without Testing?)</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Organization, March 17th 2023, Online</div>
