Adding more appearances

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -416,8 +416,10 @@
             <div class="status">NEW</div>
             <div class="talktitle">Coaching Teams to Modern Test Management</div>
             <div class="talktype">TALK</div>
+           <!-- <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>-->
+            <div class="wherewhenwhere">QA Touch Global Testers Summit, May 15th 2023, Online</div>
             <div class="wherewhenwhere">Geekle QA Summit, May 30th-31st 2023, Online</div>
-            <div class="talktheme">#ContinuousDelivery</div>
+            <div class="talktheme">#ExploratoryTesting, #ProgrammaticTests, #TestManagement</div>
         </div>
 
         <div class="card2">
