Add ncraft talk title

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://testingconf.com/testingsummit/chicago/">Testing Conference Chicago</a>, May 4th 2023, Online</li>
             <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="">QA Touch Global Testers Summit</a>, May 15th 2023, Online</li>
             <li>TALK: <span>Test Maintainability</span> at Applitools Let the Engineers Speak Event, May 18th 2023, Online</li>
-            <li>TALK: <span>To be announced</span> at <a href="https://ncrafts.io/">NewCrafts Conference</a>, May 25-26th 2023, Paris, France</li>
+            <li>TALK: <span>Let's Do a Thing and Call It Foo</span> at <a href="https://ncrafts.io/">NewCrafts Conference</a>, May 25-26th 2023, Paris, France</li>
             <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://events.geekle.us/qa23/">Geekle QA Global Summit</a>, May 30th-31st 2023, Online</li>
             <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
             <li>WORKSHOP: <span>Social Software Testing Approaches</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
