--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -48,7 +48,7 @@
             <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <div class="wherewhenwhere">EuroSTAR, June 15th 2023, Antwerp, Belgium</div>
             <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
             <!--
             <i class="fab fa-slideshare"></i>
@@ -96,9 +96,10 @@
             <div class="wherewhenwhere">Testμ Conference, August 23rd 2022, Online</div>
             <div class="wherewhenwhere">Customer Event, December 8th 2022, Helsinki, Finland</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
+            <div class="wherewhenwhere">NewCrafts Conference, May 25-26th 2023, Paris, France</div>
             <div class="wherewhenwhere">FooConf, February 1st 2023, Helsinki, Finland</div>
             <div class="wherewhenwhere">Customer Event, January 30th, 2023, Online</div>
+            <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <a href="https://speakerdeck.com/maaretp/talk-lets-do-a-thing-and-call-it-foo-2023-ed"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
@@ -416,7 +417,7 @@
             <div class="status">NEW</div>
             <div class="talktitle">Coaching Teams to Modern Test Management</div>
             <div class="talktype">TALK</div>
-           <!-- <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>-->
+            <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>
             <div class="wherewhenwhere">QA Touch Global Testers Summit, May 15th 2023, Online</div>
             <div class="wherewhenwhere">Geekle QA Summit, May 30th-31st 2023, Online</div>
             <div class="talktheme">#ExploratoryTesting, #ProgrammaticTests, #TestManagement</div>
@@ -1224,21 +1225,6 @@
         <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
     </div>
 
-
-<!--
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">Whose Test Is It Anyway?</div>
-            <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
-            <i class="fab fa-slideshare"></i>
-            <i class="fas fa-video"></i>
-            <i class="far fa-gem"></i>
-            <i class="fas fa-bars"></i>
-        </div>
-    -->
-
     </div>
     </section>
 
@@ -1386,7 +1372,7 @@
                 <div class="status">NEW</div>
                 <div class="talktitle">Social Software Testing Approaches</div>
                 <div class="talktype">TUTORIAL</div>
-                <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+                <div class="wherewhenwhere">EuroSTAR Testing Conference, June 12th 2023, Antwerp, Belgium</div>
                 <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
             </div>
 
@@ -1403,7 +1389,7 @@
                 <div class="timecircle">1/2 day</div>
                 <div class="talktitle">Exploratory Testing Essentials</div>
                 <div class="talktype">TUTORIAL</div>
-                <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, SwedenEuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+                <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden</div>
             </div>
 
             <div class="card2">
