--- a/quote.html
+++ b/quote.html
@@ -6,6 +6,13 @@
 
 <div class="blockquote-wrapper">
     <div class="blockquote">
+      <h1>Test cases are step-by-step instructions on how to miss bugs.</h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+</div>
+
+<div class="blockquote-wrapper">
+    <div class="blockquote">
       <h1>Value of information is in the actions that people take based on that information.</h1>
       <h4>&mdash;Elisabeth Hendrickson</h4>
     </div>
