Add keynote on acceptance testing

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -72,6 +72,20 @@
         </div>
 
         <div class="card2">
+            <div class="timecircle">20 min</div>
+            <div class="talktitle">Acceptance Testing - Making a Difference for Production Time</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Customer Event, April 26th 2023, Online</div>
+            <div class="talktheme">#AcceptanceTesting, #Motivational</div>
+            <a href="https://speakerdeck.com/maaretp/keynote-acceptance-testing-making-difference-for-production-time><i class="fab fa-slideshare"></i></a>
+            <!--
+            <i class="fab fa-slideshare"></i>
+            <i class="fas fa-video"></i>
+            <i class="far fa-gem"></i>
+            -->
+        </div>
+
+        <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="talktitle">Breaking Illusions with Testing</div>
             <div class="talktype">KEYNOTE</div>
