Updating link to a talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -434,6 +434,7 @@
             <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>
             <div class="wherewhenwhere">QA Touch Global Testers Summit, May 15th 2023, Online</div>
             <div class="wherewhenwhere">Geekle QA Summit, May 30th-31st 2023, Online</div>
+            <a href="https://speakerdeck.com/maaretp/coaching-teams-to-modern-test-management"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#ExploratoryTesting, #ProgrammaticTests, #TestManagement</div>
         </div>
 
