--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,31 @@
 </head>
 <body>
 
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Solitary introspection without active experimentation is daydreaming.
+       </h1>
+      <h4>&mdash;Herminia Ibarra</h4>
+    </div>
+  </div>
+
+  <div class="blockquote">
+    <h1>
+    Product owners work on information in problem space and testers work on information in solution space.     </h1>
+    <h4>&mdash;Rob Meaney</h4>
+  </div>
+</div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Writing is the best way to talk without being interrupted.
+       </h1>
+      <h4>&mdash;Jules Renard</h4>
+    </div>
+  </div>
+
 <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>Test cases are step-by-step instructions on how to miss bugs.</h1>
