Update upcoming events

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://testingconf.com/testingsummit/chicago/">Testing Conference Chicago</a>, May 4th 2023, Online</li>
-            <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="">QA Touch Global Testers Summit</a>, May 15th 2023, Online</li>
+            <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://www.linkedin.com/pulse/global-testers-summit-2023-qa-touch/">QA Touch Global Testers Summit</a>, May 15th 2023, Online</li>
             <li>TALK: <span>Let's Do a Thing and Call It Foo</span> at <a href="https://ncrafts.io/">NewCrafts Conference</a>, May 25-26th 2023, Paris, France</li>
             <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://events.geekle.us/qa23/">Geekle QA Global Summit</a>, May 30th-31st 2023, Online</li>
             <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
