--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        As testers we are often expected to not only do our work but to fix our organization to be able to do so. 
+      </h1>
+      <h4>&mdash;Anna Baik</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Solitary introspection without active experimentation is daydreaming.
        </h1>
       <h4>&mdash;Herminia Ibarra</h4>
